AUTOMAKE_OPTIONS = foreign


EXTRA_DIST = CREDITS       Makefile.am  config.w32  oct_cli.h   octopus.c    php_octopus.h \
EXPERIMENTAL  config.m4    oct_cli.c   oct_prot.h  octopus.php  tests\001.phpt

# execute phpize, and then make the php modules.

#install-exec-hook:
#	# ln $(DESTDIR)$(bindir)/program$(EXEEXT) \
#	#        $(DESTDIR)$(bindir)/proglink$(EXEEXT)

