## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = 

EXTRA_DIST = ChangeLog README

SUBDIRS = sharelib src octopusd_phpext cfg log dat

#install-data-local:
#	cp -r log ${prefix}
#	cp -r cfg ${prefix}
#	cp -r dat ${prefix}a
#
#
#
#
#install-exec-hook:
#	${LN} -s $(DESTDIR)$(bindir)/octpusd $(DESTDIR)/sample/d1/bin
#       # ln $(DESTDIR)$(bindir)/program$(EXEEXT) \
#       #        $(DESTDIR)$(bindir)/proglink$(EXEEXT)

