AUTOMAKE_OPTIONS = foreign

# INCLUDES = -I$(top_srcdir)/byte

noinst_LIBRARIES = liboctopusd.a 

liboctopusd_a_SOURCES = \
ComCfg.cpp     ConfigMng.h        LogMng.cpp           ProtocolMng.h    ServerAddMsg.cpp     ServerInfo.h   TCPSocket.cpp \
ComCfg.h       FileDelMsg.cpp     LogMng.h             QueueMng.cpp     ServerAddMsg.h       ServerMng.cpp  TCPSocket.h \
ComFun.cpp     FileDelMsg.h       Maintain.cpp         QueueMng.h       ServerDelMsg.cpp     ServerMng.h    ThreadMutex.cpp \
ComFun.h       FileUploadMsg.cpp  Maintain.h           RecvingDuty.cpp  ServerDelMsg.h       ShareMem.cpp   ThreadMutex.h \
Config.cpp     FileUploadMsg.h    Mobileinterface.cpp  RecvingDuty.h    ServerGroupInfo.cpp  ShareMem.h \
Config.h       Log.cpp            Mobileinterface.h    SendDuty.cpp     ServerGroupInfo.h    SiteInfo.cpp \
ConfigMng.cpp  Log.h              ProtocolMng.cpp      SendDuty.h       ServerInfo.cpp       SiteInfo.h
